--- a/Account Service/Create the service structure (API)/task-info.yaml
+++ b/Account Service/Create the service structure (API)/task-info.yaml
@@ -281,9 +281,9 @@ files:
 - name: src/account/AccountServiceController.java
   visible: true
   learner_created: true
-feedback_link: https://hyperskill.org/projects/217/stages/1086/implement#comment
+feedback_link: https://hyperskill.org/learn/step/16601#comment
 status: Solved
 feedback:
   message: Congratulations!
   time: Sat, 20 Aug 2022 10:33:29 UTC
-record: -1
+record: 1
