--- a/Account Service/The authentication/task-info.yaml
+++ b/Account Service/The authentication/task-info.yaml
@@ -367,6 +367,99 @@ files:
       };
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/217/stages/1087/implement#comment
+- name: src/account/AccountServiceController.java
+  visible: true
+  text: |-
+    package account;
+
+    import org.springframework.http.HttpStatus;
+    import org.springframework.web.bind.annotation.PostMapping;
+    import org.springframework.web.bind.annotation.RequestBody;
+    import org.springframework.web.bind.annotation.RestController;
+    import org.springframework.web.server.ResponseStatusException;
+
+    @RestController
+    public class AccountServiceController {
+
+        @PostMapping("/api/auth/signup")
+        public BaseUser postUser(@RequestBody User user) {
+            if (user.getName() == null || user.getName().isEmpty() || user.getLastname() == null || user.getLastname().isEmpty() ||
+                    user.getEmail() == null || user.getEmail().isEmpty() || user.getPassword() == null || user.getPassword().isEmpty() ||
+                    !user.getEmail().endsWith("@acme.com")) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST);
+            }
+
+            return new BaseUser(user);
+        }
+    }
+
+
+    class User extends BaseUser {
+        private String password;
+
+        public User() {
+            super();
+        }
+
+        public User(String name, String lastname, String email, String password) {
+            super(name, lastname, email);
+            this.password = password;
+        }
+
+        public String getPassword() {
+            return password;
+        }
+
+        public void setPassword(String password) {
+            this.password = password;
+        }
+    }
+
+    class BaseUser {
+        private String name;
+        private String lastname;
+        private String email;
+
+        public BaseUser() {
+        }
+
+        public BaseUser(String name, String lastname, String email) {
+            this.name = name;
+            this.lastname = lastname;
+            this.email = email;
+        }
+
+        public BaseUser(User user) {
+            this.name = user.getName();
+            this.lastname = user.getLastname();
+            this.email = user.getEmail();
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public String getLastname() {
+            return lastname;
+        }
+
+        public void setLastname(String lastname) {
+            this.lastname = lastname;
+        }
+
+        public String getEmail() {
+            return email;
+        }
+
+        public void setEmail(String email) {
+            this.email = email;
+        }
+    }
+  learner_created: true
+feedback_link: https://hyperskill.org/learn/step/16602#comment
 status: Unchecked
 record: -1
