--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/612593/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Tue, 23 Aug 2022 10:55:37 UTC
+update_date: Wed, 24 Aug 2022 06:25:00 UTC
 stages:
 - id: 1086
   step: 16601
@@ -60,6 +60,8 @@ topics:
     theory_id: 19487
   - title: Bean lifecycle
     theory_id: 19550
+  - title: Spring Security Crypto
+    theory_id: 21866
   - title: HTTP messages
     theory_id: 6752
   - title: Introduction to Spring Web MVC
