set up build.gradle and application.properties

--- a/Account Service/task/build.gradle
+++ b/Account Service/task/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
