--- a/Account Service/task/src/resources/application.properties
+++ b/Account Service/task/src/resources/application.properties
@@ -2,12 +2,11 @@ server.port=28852
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 spring.jackson.serialization.INDENT_OUTPUT=true
-spring.datasource.url=jdbc:h2:file:../service_db
 server.error.include-message=always
 
 #datasource settings
 spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:file:~/sampleDB
+spring.datasource.url=jdbc:h2:file:~/account_db
 spring.datasource.username=sa
 spring.datasource.password=abc123
 
@@ -17,6 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 #console settings
 spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
 spring.h2.console.settings.trace=false
 spring.jpa.show-sql=true
