--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/612593/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Wed, 24 Aug 2022 06:25:00 UTC
+update_date: Wed, 24 Aug 2022 17:51:39 UTC
 stages:
 - id: 1086
   step: 16601
   is_completed: true
 - id: 1087
   step: 16602
-  is_completed: false
+  is_completed: true
 - id: 1088
   step: 16603
   is_completed: false
