--- a/Account Service/Security first/task-info.yaml
+++ b/Account Service/Security first/task-info.yaml
@@ -518,6 +518,562 @@ files:
       };
     }
   learner_created: false
+- name: src/account/services/UserService.java
+  visible: true
+  text: |
+    package account.services;
+
+    import account.entities.User;
+    import account.repositories.UserRepository;
+    import org.springframework.beans.factory.annotation.Autowired;
+    import org.springframework.security.core.userdetails.UserDetails;
+    import org.springframework.security.core.userdetails.UserDetailsService;
+    import org.springframework.security.core.userdetails.UsernameNotFoundException;
+    import org.springframework.stereotype.Service;
+
+    import java.util.Optional;
+
+    @Service
+    public class UserService implements UserDetailsService {
+
+        @Autowired
+        private UserRepository userRepository;
+
+        @Override
+        public UserDetails loadUserByUsername(String s) throws UsernameNotFoundException {
+    //        Optional<User> user = userRepository.findByUsername(s);
+            Optional<User> user = userRepository.findByUsername(s.toLowerCase());
+
+            if (user.isPresent()){
+                return user.get();
+            }else{
+                throw new UsernameNotFoundException(String.format("Username[%s] not found"));
+            }
+        }
+    }
+  learner_created: true
+- name: src/account/configurations/SecurityConfig.java
+  visible: true
+  text: |
+    package account.configurations;
+
+    import org.springframework.beans.factory.annotation.Autowired;
+    import org.springframework.context.annotation.Bean;
+    import org.springframework.context.annotation.Configuration;
+    import org.springframework.http.HttpMethod;
+    import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+    import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+    import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+    import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+    import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+    import org.springframework.security.config.http.SessionCreationPolicy;
+    import org.springframework.security.core.userdetails.UserDetailsService;
+    import org.springframework.security.crypto.password.PasswordEncoder;
+
+    //@EnableWebSecurity(debug=true)
+    @Configuration
+    @EnableWebSecurity
+    public class SecurityConfig extends WebSecurityConfigurerAdapter {
+
+        @Autowired
+        private UserDetailsService userDetailsService;
+
+        @Autowired
+        private PasswordEncoder passwordEncoder;
+
+        @Override
+        protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+            auth.authenticationProvider(authenticationProvider());
+        }
+
+        @Override
+        protected void configure(HttpSecurity http) throws Exception {
+
+            http
+                .httpBasic()
+                .and()
+                .csrf().disable().headers().frameOptions().disable() // for Postman, the H2 console
+                .and()
+                .authorizeRequests()
+                .antMatchers("/h2-console/**").permitAll()
+                .and()
+                .authorizeRequests()
+                .antMatchers(HttpMethod.POST, "/api/auth/signup", "/actuator/shutdown").permitAll()
+                .and()
+                .authorizeRequests()
+                .anyRequest().authenticated()
+                .and()
+                .sessionManagement()
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS); // no session
+        }
+
+        @Bean
+        public DaoAuthenticationProvider authenticationProvider(){
+            DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+            provider.setPasswordEncoder(passwordEncoder);
+            provider.setUserDetailsService(userDetailsService);
+            return provider;
+        }
+
+    }
+  learner_created: true
+- name: src/account/controllers/AccountServiceController.java
+  visible: true
+  text: |
+    package account.controllers;
+
+    import account.entities.Role;
+    import account.entities.User;
+    import account.exceptions.UserExistException;
+    import account.repositories.UserRepository;
+    import org.springframework.beans.factory.annotation.Autowired;
+    import org.springframework.http.HttpStatus;
+    import org.springframework.security.core.annotation.AuthenticationPrincipal;
+    import org.springframework.security.crypto.password.PasswordEncoder;
+    import org.springframework.web.bind.annotation.GetMapping;
+    import org.springframework.web.bind.annotation.PostMapping;
+    import org.springframework.web.bind.annotation.RequestBody;
+    import org.springframework.web.bind.annotation.RestController;
+    import org.springframework.web.server.ResponseStatusException;
+
+    import java.util.Optional;
+
+    @RestController
+    public class AccountServiceController {
+
+        @Autowired
+        private UserRepository userRepository;
+
+        @Autowired
+        private PasswordEncoder passwordEncoder;
+
+        @GetMapping("/api/empl/payment")
+        public UserResponse testAuth(@AuthenticationPrincipal User user) {
+            return new UserResponse(user);
+        }
+
+        @PostMapping("/api/auth/signup")
+        public UserResponse createUser(@RequestBody UserRegistration userRegistration) {
+            if (userRegistration.getName() == null || userRegistration.getName().isEmpty() || userRegistration.getLastname() == null || userRegistration.getLastname().isEmpty() ||
+                    userRegistration.getEmail() == null || userRegistration.getEmail().isEmpty() || userRegistration.getPassword() == null || userRegistration.getPassword().isEmpty() ||
+                    !userRegistration.getEmail().endsWith("@acme.com")) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST);
+            }
+
+            String username = userRegistration.getEmail().toLowerCase();
+
+            if (userRepository.findByUsername(username).isPresent()) {
+                throw new UserExistException("User exist!");
+            }
+
+            User user = new User();
+            user.setUsername(username);
+            user.setName(userRegistration.getName());
+            user.setLastname(userRegistration.getLastname());
+            user.setEmail(userRegistration.getEmail());
+            user.setPassword(passwordEncoder.encode(userRegistration.getPassword()));
+            user.grantAuthority(Role.ROLE_USER);
+            userRepository.save(user);
+
+            return new UserResponse(user);
+        }
+    }
+
+    class UserResponse {
+        private long id;
+        private String name;
+        private String lastname;
+        private String email;
+
+        public UserResponse() {
+        }
+
+        public UserResponse(long id, String name, String lastname, String email) {
+            this.id = id;
+            this.name = name;
+            this.lastname = lastname;
+            this.email = email;
+        }
+
+        public UserResponse(User user) {
+            this.id = user.getId();
+            this.name = user.getName();
+            this.lastname = user.getLastname();
+            this.email = user.getEmail();
+        }
+
+        public long getId() {
+            return id;
+        }
+
+        public void setId(long id) {
+            this.id = id;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public String getLastname() {
+            return lastname;
+        }
+
+        public void setLastname(String lastname) {
+            this.lastname = lastname;
+        }
+
+        public String getEmail() {
+            return email;
+        }
+
+        public void setEmail(String email) {
+            this.email = email;
+        }
+    }
+
+    class UserRegistration {
+
+        private String name;
+        private String lastname;
+        private String email;
+        private String password;
+
+        public UserRegistration() {
+        }
+
+        public UserRegistration(String name, String lastname, String email, String password) {
+            this.name = name;
+            this.lastname = lastname;
+            this.email = email;
+            this.password = password;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public String getLastname() {
+            return lastname;
+        }
+
+        public void setLastname(String lastname) {
+            this.lastname = lastname;
+        }
+
+        public String getEmail() {
+            return email;
+        }
+
+        public void setEmail(String email) {
+            this.email = email;
+        }
+
+        public String getPassword() {
+            return password;
+        }
+
+        public void setPassword(String password) {
+            this.password = password;
+        }
+    }
+  learner_created: true
+- name: src/account/configurations/BCryptEncoderConfig.java
+  visible: true
+  text: |
+    package account.configurations;
+
+    import org.springframework.context.annotation.Bean;
+    import org.springframework.context.annotation.Configuration;
+    import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+
+    @Configuration
+    public class BCryptEncoderConfig {
+
+        @Bean
+        public BCryptPasswordEncoder passwordEncoder(){
+            return new BCryptPasswordEncoder();
+        }
+    }
+  learner_created: true
+- name: src/account/exceptions/UserExistException.java
+  visible: true
+  text: |-
+    package account.exceptions;
+
+    public class UserExistException extends RuntimeException {
+
+        public UserExistException(String message) {
+            super(message);
+        }
+    }
+  learner_created: true
+- name: src/account/exceptions/models/ErrorModel.java
+  visible: true
+  text: |
+    package account.exceptions.models;
+
+    import org.springframework.http.HttpStatus;
+
+    import java.time.LocalDateTime;
+
+    public class ErrorModel {
+
+        private HttpStatus httpStatus;
+
+        private LocalDateTime timestamp;
+
+        private String message;
+
+        private String details;
+
+        public ErrorModel(HttpStatus httpStatus, String message, String details) {
+            this.timestamp = LocalDateTime.now();
+            this.httpStatus = httpStatus;
+            this.message = message;
+            this.details = details;
+        }
+
+        public HttpStatus getHttpStatus() {
+            return httpStatus;
+        }
+
+        public LocalDateTime getTimestamp() {
+            return timestamp;
+        }
+
+        public String getMessage() {
+            return message;
+        }
+
+        public String getDetails() {
+            return details;
+        }
+    }
+  learner_created: true
+- name: src/account/repositories/UserRepository.java
+  visible: true
+  text: |
+    package account.repositories;
+
+    import account.entities.User;
+    import org.springframework.data.jpa.repository.JpaRepository;
+
+    import java.util.Optional;
+
+    public interface UserRepository extends JpaRepository<User, Long> {
+
+        Optional<User> findByUsername(String username);
+    }
+  learner_created: true
+- name: src/account/exceptions/RestExceptionHandler.java
+  visible: true
+  text: |
+    package account.exceptions;
+
+    import account.exceptions.models.ErrorModel;
+    import org.springframework.http.HttpHeaders;
+    import org.springframework.http.HttpStatus;
+    import org.springframework.http.ResponseEntity;
+    import org.springframework.web.bind.MethodArgumentNotValidException;
+    import org.springframework.web.bind.annotation.ExceptionHandler;
+    import org.springframework.web.bind.annotation.RestControllerAdvice;
+    import org.springframework.web.context.request.WebRequest;
+    import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+
+    import javax.persistence.EntityNotFoundException;
+    import java.time.LocalDateTime;
+    import java.util.LinkedHashMap;
+    import java.util.Map;
+
+    @RestControllerAdvice
+    public class RestExceptionHandler extends ResponseEntityExceptionHandler {
+
+    //    @Override
+    //    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+    //        ErrorModel error = new ErrorModel(HttpStatus.BAD_REQUEST, "Validation Error", ex.getBindingResult().toString());
+    //
+    //        return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
+    //    }
+    //
+    //    @ExceptionHandler(EntityNotFoundException.class)
+    //    private ResponseEntity<ErrorModel> handleEntityNotFound(EntityNotFoundException ex){
+    //        ErrorModel error = new ErrorModel(HttpStatus.NOT_FOUND, "Entity not found", ex.getMessage());
+    //
+    //        return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
+    //    }
+
+    //    @ExceptionHandler(UserExistException.class)
+    //    private ResponseEntity<ErrorModel> handleUserExist(UserExistException ex, WebRequest request){
+    ////        ErrorModel error = new ErrorModel(HttpStatus.BAD_REQUEST.value(), e.getMessage(), request.getDescription(false));
+    //        ErrorModel error = new ErrorModel(HttpStatus.BAD_REQUEST.value(), ex.getMessage(), request.getDescription(false));
+    //
+    //        return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
+    //    }
+
+        @ExceptionHandler(UserExistException.class)
+        protected ResponseEntity<Object> handleUserExist(UserExistException ex, WebRequest request) {
+            Map<String, Object> body = new LinkedHashMap<>();
+            body.put("status", HttpStatus.BAD_REQUEST.value());
+            body.put("timestamp", LocalDateTime.now());
+            body.put("error", "Bad Request");
+            body.put("message", ex.getMessage());
+            body.put("path", request.getDescription(false));
+
+            return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+        }
+    }
+  learner_created: true
+- name: src/account/entities/User.java
+  visible: true
+  text: |
+    package account.entities;
+
+    import org.springframework.security.core.GrantedAuthority;
+    import org.springframework.security.core.authority.SimpleGrantedAuthority;
+    import org.springframework.security.core.userdetails.UserDetails;
+
+    import javax.persistence.*;
+    import java.util.ArrayList;
+    import java.util.List;
+
+    @Entity
+    public class User implements UserDetails {
+
+        @Id
+        @GeneratedValue(strategy = GenerationType.AUTO)
+        private Long id;
+
+        private String username;
+        private String name;
+        private String lastname;
+        private String email;
+
+        private String password;
+
+        private boolean accountNonExpired;
+
+        private boolean accountNonLocked;
+
+        private boolean credentialsNonExpired;
+
+        private boolean enabled;
+
+        @Enumerated(EnumType.STRING)
+        @ElementCollection(fetch = FetchType.EAGER)
+        private List<Role> roles;
+
+        public User() {
+            this.accountNonExpired = true;
+            this.accountNonLocked = true;
+            this.credentialsNonExpired = true;
+            this.enabled = true;
+        }
+
+        public Long getId() {
+            return id;
+        }
+
+        public void setId(Long id) {
+            this.id = id;
+        }
+
+        @Override
+        public String getUsername() {
+            return username;
+        }
+
+        public void setUsername(String username) {
+            //this.username = username;
+            this.username = username.toLowerCase();
+        }
+
+        @Override
+        public String getPassword() {
+            return password;
+        }
+
+        public void setPassword(String password) {
+            this.password = password;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public String getLastname() {
+            return lastname;
+        }
+
+        public void setLastname(String lastname) {
+            this.lastname = lastname;
+        }
+
+        public String getEmail() {
+            return email;
+        }
+
+        public void setEmail(String email) {
+            this.email = email;
+        }
+
+        @Override
+        public boolean isAccountNonExpired() {
+            return accountNonExpired;
+        }
+
+        @Override
+        public boolean isAccountNonLocked() {
+            return accountNonLocked;
+        }
+
+        @Override
+        public boolean isCredentialsNonExpired() {
+            return credentialsNonExpired;
+        }
+
+        @Override
+        public boolean isEnabled() {
+            return true;
+        }
+
+        public void grantAuthority(Role authority) {
+            if (roles == null) {
+                roles = new ArrayList<>();
+            }
+            roles.add(authority);
+        }
+
+        @Override
+        public List<GrantedAuthority> getAuthorities(){
+            List<GrantedAuthority> authorities = new ArrayList<>();
+            roles.forEach(role -> authorities.add(new SimpleGrantedAuthority(role.toString())));
+            return authorities;
+        }
+
+    }
+  learner_created: true
+- name: src/account/entities/Role.java
+  visible: true
+  text: |
+    package account.entities;
+
+    public enum Role {
+        ROLE_USER,
+        ROLE_ADMIN
+    }
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/16603#comment
 status: Unchecked
 record: -1
