--- a/Account Service/Security first/task-info.yaml
+++ b/Account Service/Security first/task-info.yaml
@@ -803,18 +803,6 @@ files:
         }
     }
   learner_created: true
-- name: src/account/exceptions/UserExistException.java
-  visible: true
-  text: |-
-    package account.exceptions;
-
-    public class UserExistException extends RuntimeException {
-
-        public UserExistException(String message) {
-            super(message);
-        }
-    }
-  learner_created: true
 - name: src/account/exceptions/models/ErrorModel.java
   visible: true
   text: |
@@ -1074,6 +1062,21 @@ files:
         ROLE_ADMIN
     }
   learner_created: true
+- name: src/account/exceptions/UserException.java
+  visible: true
+  text: |-
+    package account.exceptions;
+
+    public class UserExistException extends RuntimeException {
+
+        public UserExistException(String message) {
+            super(message);
+        }
+    }
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/16603#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 25 Aug 2022 10:26:12 UTC
 record: -1
